<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_matches">

    <fragment
        android:id="@+id/navigation_matches"
        android:name="fr.allanh.yaya.ui.matches.MatchesFragment"
        android:label="@string/title_matches" />

    <fragment
        android:id="@+id/navigation_leaderboard"
        android:name="fr.allanh.yaya.ui.leaderboard.LeaderboardFragment"
        android:label="@string/title_leaderboard" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="fr.allanh.yaya.ui.setting.SettingFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_setting" />
</navigation>